<resources>
    <string name="app_name">KHUNECT_01</string>
    <string name="아이디">아이디</string>
    <string name="패스워드">패스워드</string>
    <string name="패스워드재입력">패스워드 재입력</string>
    <string name="로그인">로그인</string>
    <string name="회원가입">회원가입</string>
    <string name="khunect로고">khunect_logo</string>
    <string name="닉네임">닉네임</string>

    <string name="홈">홈</string>
    <string name="내강의">내 강의</string>
    <string name="함께해요">함께해요</string>
    <string name="홍보">홍보</string>
    <string name="거래">장터</string>

    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button"></string>
    <string name="dummy_content">KHU:NECT</string>
    <string name="button">Button</string>
    <string name="가입">가입</string>
    <string name="취소">취소</string>
    <string name="로그아웃">Logout</string>
    <string name="검색">검색</string>
    <string name="뜨거운게시물">뜨거운 게시물</string>
    <string name="내수업새소식">내 수업 새소식</string>
    <string name="장터새소식">장터 새소식</string>
    <string name="아르바이트새소식">알바 새소식</string>
    <string name="더보기">더 보기</string>
    <string name="홈서치힌트">제목, 내용, 태그</string>
    <string name="검색결과">검색 결과</string>
    <string name="동아리">동아리</string>
    <string name="알바">알바</string>
    <string name="취미">취미</string>
    <string name="스터디">스터디</string>
    <string name="삽니다">삽니다</string>
    <string name="팝니다">팝니다</string>
    <string name="제목">제목</string>
    <string name="내용">여기를 눌러 내용을 작성하세요.</string>
    <string name="올리기">올리기</string>
    <string name="게시판이름">게시판이름</string>
    <string name="작성자정보">작성자정보</string>
    <string name="내용2">내용</string>
    <string name="댓글">"  댓글"</string>
    <string name="이메일">이메일</string>
    <string name="전공">전공(-과)</string>
    <string name="프로필사진">프로필 사진</string>
    <string name="다음">다음</string>
    <string name="파일선택">파일 선택</string>
    <string name="todo">TODO</string>
    <string name="뒤로">뒤로</string>
    <string name="업로드">업로드</string>
    <string name="profile">profile</string>
    <string name="공모전">공모전</string>
    <string name="장터">거래</string>
    <string name="이미지업로드버튼">이미지업로드버튼</string>
    <string name="업로드이미지삭제">업로드이미지삭제</string>
    <string name="KLAS">KLAS</string>
    <string name="연동하기">연동하기</string>
    <string name="KLASid">KLAS ID</string>
    <string name="KLASpw">KLAS PW</string>
    <string name="klas연동문">내 강의 게시판 이용을 위해서는 KLAS 연동이 필요합니다.</string>
    <string name="이름">이름</string>
    <string name="공구">공구</string>
    <string name="내정보">내 정보</string>
    <string name="회원정보수정">회원 정보 수정</string>
    <string name="프로필사진수정">프로필 사진 변경</string>
    <string name="닉네임변경">닉네임 변경</string>
    <string name="비밀번호변경">비밀번호 변경</string>
    <string name="적용">적용</string>
    <string name="새닉네임">사용할 닉네임</string>
    <string name="새비밀번호">새 비밀번호</string>
    <string name="현재비밀번호">현재 비밀번호</string>
    <string name="KLAS연동하기">KLAS 연동하기</string>
    <string name="새비밀번호재입력">새 비밀번호 재입력</string>
    <string name="댓글작성">댓글 쓰기...</string>
</resources>
