<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SigninActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/프로필사진"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/full_border"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView_profile"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:contentDescription="@string/profile"
                            app:srcCompat="@drawable/avatar" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/button_upload"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_gaesimul"
                        android:onClick="onUploadButtonClicked"
                        android:text="@string/파일선택"
                        android:textColor="@color/gray_notselected" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

                    <EditText
                        android:id="@+id/text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/이름"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/text_userNickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/닉네임"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/text_userID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/아이디"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                    <EditText
                        android:id="@+id/text_userPassword1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/패스워드"
                        android:importantForAutofill="no"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/text_userPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/패스워드재입력"
                        android:importantForAutofill="no"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/이메일"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress" />

                    <EditText
                        android:id="@+id/text_major"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/전공"
                        android:importantForAutofill="no"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                    <Button
                        android:id="@+id/button_signup"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onSignupButtonClicked"
                        android:text="@string/가입" />

                    <Button
                        android:id="@+id/button_cancel"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onCancelButtonClicked"
                        android:text="@string/취소" />
                </LinearLayout>
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>