<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modifyuser">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/full_border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/full_border"
            android:gravity="center"
            android:text="@string/회원정보수정"
            android:textColor="@color/colorKyunghee"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_profile2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/full_border"
                android:contentDescription="@string/profile"
                app:srcCompat="@drawable/avatar" />
        </LinearLayout>

        <Button
            android:id="@+id/button_modimage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_topborder"
            android:onClick="onProfileClicked"
            android:text="@string/프로필사진수정" />

        <Button
            android:id="@+id/button_modnick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_topborder"
            android:onClick="onNickClicked"
            android:text="@string/닉네임변경" />

        <Button
            android:id="@+id/button_modpw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_topborder"
            android:onClick="onPasswordClicked"
            android:text="@string/비밀번호변경" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>