<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signupklas">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="49dp"
        android:gravity="fill"
        android:text="@string/klas연동문"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/full_border"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <EditText
            android:id="@+id/editText_klasid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/KLASid"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editText_klaspw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/KLASpw"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_klas_connect"
                style="?android:borderlessButtonStyle"
                android:layout_width="126dp"
                android:layout_height="wrap_content"
                android:background="@drawable/full_border"
                android:onClick="onKlasButtonClicked"
                android:text="@string/연동하기"
                android:textColor="@color/colorKyunghee" />

            <Button
                android:id="@+id/button32_cancel"
                style="?android:borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/full_border"
                android:onClick="onCancelClicked"
                android:text="@string/취소"
                android:textColor="@color/colorKyunghee" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>