<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupphtoActivity">

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="120dp"
        android:layout_height="187dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/프로필사진"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imageView_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/profile"
            app:srcCompat="@drawable/avatar" />

        <Button
            android:id="@+id/button_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_gaesimul"
            android:onClick="onUploadButtonClicked"
            android:text="@string/파일선택"
            android:textColor="@color/gray_notselected" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <Button
            android:id="@+id/button_signup"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSignupButtonClicked"
            android:text="@string/가입"
            android:textColor="@color/colorKyunghee" />

        <Button
            android:id="@+id/button30_back"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onBackButtonClicked"
            android:text="@string/뒤로"
            android:textColor="@color/colorKyunghee" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>