<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/이미지레이아웃"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/khunect로고"
            app:srcCompat="@drawable/khunect_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/아이디창"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/비밀번호창"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/이미지레이아웃">

        <EditText
            android:id="@+id/InputText_ID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/아이디"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/비밀번호창"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/버튼두개"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/아이디창">

        <EditText
            android:id="@+id/InputText_PW"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/패스워드"
            android:importantForAutofill="no"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/버튼두개"
        style="?android:attr/buttonBarStyle"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="160dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/비밀번호창">


        <Button
            android:id="@+id/Button_Login"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onLoginButtonClicked"
            android:text="@string/로그인"></Button>

        <Button
            android:id="@+id/Button_Signin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onSignupButtonClicked"
            android:text="@string/회원가입"></Button>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>